# KMP-MineAgent

./: .gitignore  .gitmodules  AGENTS.MD  CHANGELOG.md  README.md  RELEASE_NOTES.md  build.gradle.kts  gradle.properties  package_replace.kts  settings.gradle.kts
.agent/: AGENTS.MD
.agent/rules/: AGENTS.MD  code-style-guide.md
.aiassistant/rules/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
ai-rule/: project.md
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/ext/: AndroidExt.kt  KotlinMultiplatformExt.kt
composeApp/: build.gradle.kts
composeApp/schemas/org.onion.agro.database.AgentDatabase/: 1.json
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/org/onion/agent/: MainActivity.kt
composeApp/src/androidMain/kotlin/org/onion/agent/database/: AndroidAgentDatabase.kt
composeApp/src/androidMain/kotlin/org/onion/agent/native/: DiffusionLoader.android.kt  LLMLoader.android.kt
composeApp/src/androidMain/kotlin/org/onion/agro/: MainActivity.kt
composeApp/src/androidMain/kotlin/org/onion/agro/database/: AndroidAgentDatabase.kt
composeApp/src/androidMain/res/drawable/: ic_launcher.xml  ic_launcher_round.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: ic_chat.xml  ic_library.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-zh/: strings.xml
composeApp/src/commonMain/kotlin/org/onion/agent/: App.kt
composeApp/src/commonMain/kotlin/org/onion/agent/constant/: JsPattern.kt
composeApp/src/commonMain/kotlin/org/onion/agent/database/: AgentDatabase.kt  ChatHistoryDao.kt  ChatHistoryEntities.kt  ChatHistoryRepository.kt
composeApp/src/commonMain/kotlin/org/onion/agent/di/: KoinDi.kt  ViewModelModule.kt
composeApp/src/commonMain/kotlin/org/onion/agent/native/: DiffusionLoader.kt  LLMLoader.kt
composeApp/src/commonMain/kotlin/org/onion/agent/rule/: CommonRuleParser.kt  ExploreRuleParser.kt
composeApp/src/commonMain/kotlin/org/onion/agent/utils/: Animations.kt  ImageLoader.kt  NetworkUtil.kt  PngMetadata.kt
composeApp/src/commonMain/kotlin/org/onion/agent/viewmodel/: BookSourceViewModel.kt  ChatViewModel.kt
composeApp/src/commonMain/kotlin/org/onion/agro/: App.kt
composeApp/src/commonMain/kotlin/org/onion/agro/constant/: JsPattern.kt
composeApp/src/commonMain/kotlin/org/onion/agro/database/: AgentDatabase.kt  ChatHistoryDao.kt  ChatHistoryEntities.kt  ChatHistoryRepository.kt
composeApp/src/commonMain/kotlin/org/onion/agro/di/: KoinDi.kt  ViewModelModule.kt
composeApp/src/commonMain/kotlin/org/onion/agro/rule/: CommonRuleParser.kt  ExploreRuleParser.kt
composeApp/src/commonMain/kotlin/org/onion/agro/utils/: Animations.kt  ImageLoader.kt  NetworkUtil.kt  PngMetadata.kt
composeApp/src/commonMain/kotlin/org/onion/agro/viewmodel/: BookSourceViewModel.kt  ChatViewModel.kt
composeApp/src/commonTest/kotlin/org/onion/agent/: ComposeAppCommonTest.kt
composeApp/src/commonTest/kotlin/org/onion/agro/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/org/onion/agent/: main.kt
composeApp/src/desktopMain/kotlin/org/onion/agro/: main.kt
composeApp/src/iosArm64Main/kotlin/org/onion/agro/: MainViewController.kt
composeApp/src/iosMain/kotlin/org/onion/agent/: MainViewController.kt
composeApp/src/nativeInterop/cinterop/: litertlm.def
composeApp/src/wasmJsMain/kotlin/org/onion/agent/: main.kt
composeApp/src/wasmJsMain/kotlin/org/onion/agro/: main.kt
composeApp/src/wasmJsMain/resources/: index.html
cpp/: AGENTS.md
cpp/bridge/: CMakeLists.txt
cpp/diffusion-loader.cpp/: diffusion_loader_jni.cpp
cpp/llm-loader.cpp/: CMakeLists.txt
cpp/patches/: lite-rt-lm-ios-native-link.patch
data-model/src/commonMain/kotlin/com/onion/model/: ChatHistory.kt  ChatMessage.kt
docs/: AppIcon.icns  code-style-guide.md
docs/agents/: data-model.md  i18n-guide.md  native-cpp.md  ui-theme.md
docs/designs/: agent-loop-tool-runtime.md
docs/specs/: bazel-windows-android-rc.md  chat-history-room-persistence.md  desktop-icon-assets.md  ios-litertlm-platform.md  llm-agent-iteration-roadmap.md  package-replace-script.md  svg-image-library-card.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
patch/: bazel-vc_config.patch  fix__Windows_platform_loading_model_adaptation.patch  fix__add_windows_path_-_在_Windows_系统下，如果没有特别指定编译参数，MSVC_(cl_exe)_会默认使用操作系统的编码（通常中文_Windows.patch  mac_cmake.patch  mine_computer_CMake_build_config_in_company.patch  window-bazel-build-fix.patch
scripts/: generate_desktop_icons.py
server/: build.gradle.kts
server/src/main/kotlin/org/onion/agent/: Application.kt
server/src/main/kotlin/org/onion/agro/: Application.kt
server/src/test/kotlin/org/onion/agent/: ApplicationTest.kt
server/src/test/kotlin/org/onion/agro/: ApplicationTest.kt
shared/: build.gradle.kts
shared/src/androidMain/kotlin/org/onion/agent/: Platform.android.kt
shared/src/androidMain/kotlin/org/onion/agro/: Platform.android.kt
shared/src/commonMain/kotlin/org/onion/agent/: Constants.kt  Greeting.kt  Platform.kt
shared/src/commonMain/kotlin/org/onion/agro/: Constants.kt  Greeting.kt  Platform.kt
shared/src/commonTest/kotlin/org/onion/agent/: SharedCommonTest.kt
shared/src/commonTest/kotlin/org/onion/agro/: SharedCommonTest.kt
shared/src/iosMain/kotlin/org/onion/agent/: Platform.ios.kt
shared/src/iosMain/kotlin/org/onion/agro/: Platform.ios.kt
shared/src/jvmMain/kotlin/org/onion/agent/: Platform.jvm.kt
shared/src/jvmMain/kotlin/org/onion/agro/: Platform.jvm.kt
shared/src/wasmJsMain/kotlin/org/onion/agent/: Platform.wasmJs.kt
shared/src/wasmJsMain/kotlin/org/onion/agro/: Platform.wasmJs.kt
ui-theme/: build.gradle.kts
ui-theme/src/commonMain/kotlin/com/onion/theme/: Theme.kt
(+81 files in other folders)
